# NvFlux

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  nvflux.c  uninstall.sh
completions/bash/: nvflux
completions/fish/: nvflux.fish
completions/zsh/: _nvflux
docs/: INSTALLATION.md  SECURITY.md
examples/: profile-switcher.sh  rofi-launcher.sh
include/: hw.h  nvflux.h  state.h
man/: nvflux.1
scripts/: check-deps.sh  install.sh  setup-audio.sh  uninstall.sh
src/: gpu.c  gpu.h  hw.c  main.c  nvflux.c  nvidia.c  nvidia.h  profile.c  profile.h  state.c  state.h
tests/: test_nvflux.c  test_parse.c
